[tool.poetry]
name = "course-work5"
version = "0.1.0"
description = ""
authors = ["Elena Kanysheva <elenakanicheva@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work5"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
